# Babel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Protocol  build.sh  build_win.sh  conanfile.txt
client/: CMakeLists.txt  main.cpp
client/Audio/: AudioCompressor.hpp  AudioWrapper.cpp  AudioWrapper.hpp
src/client/: CMakeLists.txt  CustomButton.cpp  CustomButton.hpp  main.cpp
src/client/Audio/: AudioCompressor.cpp  AudioCompressor.hpp  AudioException.cpp  AudioException.hpp  AudioInfo.hpp  AudioWrapper.cpp  AudioWrapper.hpp
src/client/DOC/html/: AudioCompressor_8cpp.html  AudioCompressor_8cpp__incl.map  AudioCompressor_8cpp__incl.md5  AudioCompressor_8hpp.html  AudioCompressor_8hpp__dep__incl.map  AudioCompressor_8hpp__dep__incl.md5  AudioCompressor_8hpp__incl.map  AudioCompressor_8hpp__incl.md5  AudioCompressor_8hpp_source.html  AudioException_8cpp.html  AudioException_8cpp__incl.map  AudioException_8cpp__incl.md5  AudioException_8hpp.html  AudioException_8hpp__dep__incl.map  AudioException_8hpp__dep__incl.md5  AudioException_8hpp__incl.map  AudioException_8hpp__incl.md5  AudioException_8hpp_source.html  AudioInfo_8hpp.html  AudioInfo_8hpp__dep__incl.map  AudioInfo_8hpp__dep__incl.md5  AudioInfo_8hpp_source.html  AudioWrapper_8cpp.html  AudioWrapper_8cpp__incl.map  AudioWrapper_8cpp__incl.md5  AudioWrapper_8hpp.html  AudioWrapper_8hpp__dep__incl.map  AudioWrapper_8hpp__dep__incl.md5  AudioWrapper_8hpp__incl.map  AudioWrapper_8hpp__incl.md5  AudioWrapper_8hpp_source.html  Packet_8hpp.html  Packet_8hpp__incl.map  Packet_8hpp__incl.md5  Packet_8hpp_source.html  TcpClient_8cpp.html  TcpClient_8cpp__incl.map  TcpClient_8cpp__incl.md5  TcpClient_8hpp.html  TcpClient_8hpp__dep__incl.map  (+112 more)
src/client/DOC/latex/: AudioCompressor_8cpp.tex  AudioCompressor_8cpp__incl.md5  AudioCompressor_8hpp.tex  AudioCompressor_8hpp__dep__incl.md5  AudioCompressor_8hpp__incl.md5  AudioException_8cpp.tex  AudioException_8cpp__incl.md5  AudioException_8hpp.tex  AudioException_8hpp__dep__incl.md5  AudioException_8hpp__incl.md5  AudioInfo_8hpp.tex  AudioInfo_8hpp__dep__incl.md5  (+63 more)
src/client/MainWindow/: Mainwindow.cpp  Mainwindow.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
src/client/Network/: NetworkInfo.hpp  Packet.hpp  TcpClient.cpp  TcpClient.hpp  UdpClient.cpp  UdpClient.hpp
src/common/: CMakeLists.txt  IPacket.hpp  PacketFactory.cpp  PacketFactory.hpp  test.cpp
src/common/IO/: IBinaryReader.hpp  IBinaryWriter.hpp  NativeBinaryReader.cpp  NativeBinaryReader.hpp  NativeBinaryWriter.cpp  NativeBinaryWriter.hpp
src/common/Packets/: AcceptFriendPacket.cpp  AcceptFriendPacket.hpp  AddFriendPacket.cpp  AddFriendPacket.hpp  CallPacket.cpp  CallPacket.hpp  CallingPacket.hpp  ConnectPacket.cpp  ConnectPacket.hpp  FriendAcceptedPacket.hpp  FriendInfoPacket.hpp  FriendRemovedPacket.hpp  HangUp.cpp  HangUp.hpp  HangUpPacket.cpp  HangUpPacket.hpp  ReceivedFriendRequestPacket.hpp  RegisterPacket.cpp  RegisterPacket.hpp  RemoveFriendPacket.cpp  RemoveFriendPacket.hpp  ResponsePacket.hpp
src/server/: CMakeLists.txt  main.cpp
src/server/database/: DataBaseProvider.cpp  DataBaseProvider.hpp  IDataBaseProvider.hpp  RequestBuilder.cpp  RequestBuilder.hpp  SqliteProvider.cpp  SqliteProvider.hpp
src/server/logic/: Client.hpp
src/server/network/: BoostConnection.cpp  BoostConnection.hpp  BoostListener.cpp  BoostListener.hpp  IConnection.hpp  IListener.hpp
src/server/queue/: ConcurrentQueue.hpp
src/server/services/: BoostService.hpp  ClientService.hpp  DataBaseService.hpp  DispatchService.hpp  HandlerService.cpp  HandlerService.hpp  IService.hpp  LogService.hpp  NetworkService.hpp  ServiceLocator.hpp  UserService.hpp
(+603 files in other folders)
